k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tts-server
  labels:
    app: tts-server
spec:
  type: ClusterIP
  selector:
    app: tts-server
  ports:
    - name: http
      port: 80
      targetPort: http
